# controllers/user.go
@@ -3,22 +3,20 @@ package controllers
 import (
 	"fmt"
 	"ginchat1/models"
-	"ginchat1/utils"
-	"github.com/asaskevich/govalidator"
+	"ginchat1/service/user"
 	"github.com/gin-gonic/gin"
-	"math/rand"
 )
 
 // GetAllUserBasic
 // @Summary 所有用户
 // @Tags User
+// @Param user-id header string true "用户id"
+// @Param user-token header string true "用户token"
 // @Success 200 {string} json {"code": "200", "message": "Success"}
 // @Router /user/getUserList [get]
 func GetAllUserBasic(c *gin.Context) {
-	users := models.GetUserBasic()
-	c.JSON(200, gin.H{
-		"message": users,
-	})
+	resp, code, err := user.GetAllUser()
+	RenderJson(c, resp, code, err)
 }
 
 // GetUserByUserName
@@ -28,16 +26,8 @@ func GetAllUserBasic(c *gin.Context) {
 // @Success 200 {string} json {"code": "200", "message": "Success"}
 // @Router /user/getUserByUserName [post]
 func GetUserByUserName(c *gin.Context) {
-	user := models.GetUserByUserName(c.PostForm("userName"))
-	if user.UserName == "" {
-		c.JSON(400, gin.H{
-			"message": "未找到对应成员",
-		})
-		return
-	}
-	c.JSON(200, gin.H{
-		"message": user,
-	})
+	resp, code, err := user.GetUserByUserName(c)
+	RenderJson(c, resp, code, err)
 }
 
 // GetUserByPhone
@@ -47,16 +37,8 @@ func GetUserByUserName(c *gin.Context) {
 // @Success 200 {string} json {"code": "200", "message": "Success"}
 // @Router /user/getUserByPhone [post]
 func GetUserByPhone(c *gin.Context) {
-	user := models.GetUserByPhone(c.PostForm("phone"))
-	if user.UserName == "" {
-		c.JSON(400, gin.H{
-			"message": "未找到对应成员",
-		})
-		return
-	}
-	c.JSON(200, gin.H{
-		"message": user,
-	})
+	resp, code, err := user.GetUserByPhone(c)
+	RenderJson(c, resp, code, err)
 }
 
 // GetUserByEmail
@@ -66,82 +48,28 @@ func GetUserByPhone(c *gin.Context) {
 // @Success 200 {string} json {"code": "200", "message": "Success"}
 // @Router /user/getUserByUEmail [post]
 func GetUserByEmail(c *gin.Context) {
-	user := models.GetUserByEmail(c.PostForm("email"))
-	if user.UserName == "" {
-		c.JSON(400, gin.H{
-			"message": "未找到对应成员",
-		})
-		return
-	}
-	c.JSON(200, gin.H{
-		"message": user,
-	})
+	resp, code, err := user.GetUserByEmail(c)
+	RenderJson(c, resp, code, err)
 }
 
 // CreateUser
 // @Summary 新增用户
 // @Tags User
-// @Param userName formData string true "用户名"
-// @Param passWord formData string true "密码"
-// @Param name formData string true "名称"
-// @Param email formData string false "email"
-// @Param phone formData string false "phone"
+// @Param user_name body string true "用户名"
+// @Param passWord body string true "密码"
+// @Param name body string true "名称"
+// @Param email body string false "email"
+// @Param phone body string false "phone"
 // @Success 200 {string} json {"code": "200", "message": "Success"}
 // @Router /user/createUser [post]
 func CreateUser(c *gin.Context) {
-	user := &models.UserBasic{
-		UserName: c.PostForm("userName"),
-		Name:     c.PostForm("name"),
-		Email:    c.PostForm("email"),
-		Phone:    c.PostForm("phone"),
-	}
-
-	user.Salt = fmt.Sprintf("%06d", rand.Int31())
-	user.PassWord = utils.MakePassword(c.PostForm("passWord"), user.Salt)
-	fmt.Println(user.PassWord)
-
-	_, err := govalidator.ValidateStruct(user)
-	if err != nil {
+	var req *models.UserBasic
+	if err := c.ShouldBindJSON(&req); err != nil {
 		fmt.Println(err)
-		c.JSON(400, gin.H{
-			"message": "创建失败，格式有误",
-		})
 		return
 	}
-
-	users := models.GetUser(user.UserName, user.Phone, user.Email)
-
-	for _, i := range users {
-		if i.UserName == user.UserName {
-			c.JSON(400, gin.H{
-				"message": "注册失败，用户名重复",
-			})
-			return
-		}
-		if i.Email == user.Email && i.Email != "" {
-			c.JSON(400, gin.H{
-				"message": "注册失败，邮箱重复",
-			})
-			return
-		}
-		if i.Phone == user.Phone && i.Phone != "" {
-			c.JSON(400, gin.H{
-				"message": "注册失败，手机号重复",
-			})
-			return
-		}
-	}
-
-	createUser := models.CreateUser(user)
-	if createUser.Error != nil {
-		c.JSON(400, gin.H{
-			"message": "注册失败",
-		})
-		return
-	}
-	c.JSON(200, gin.H{
-		"message": "注册成功",
-	})
+	resp, code, err := user.CreateUser(req)
+	RenderJson(c, resp, code, err)
 }
 
 // DeleteUser
@@ -151,19 +79,8 @@ func CreateUser(c *gin.Context) {
 // @Success 200 {string} json {"code": "200", "message": "Success"}
 // @Router /user/deleteUser [get]
 func DeleteUser(c *gin.Context) {
-	user := &models.UserBasic{
-		UserName: c.Query("userName"),
-	}
-	createUser := models.DeleteUser(user)
-	if createUser.Error != nil {
-		c.JSON(200, gin.H{
-			"message": "删除失败",
-		})
-		return
-	}
-	c.JSON(200, gin.H{
-		"message": "删除成功",
-	})
+	code, err := user.DeleteUser(c)
+	RenderJson(c, nil, code, err)
 }
 
 // UpdateUser
@@ -177,31 +94,6 @@ func DeleteUser(c *gin.Context) {
 // @Success 200 {string} json {"code": "200", "message": "Success"}
 // @Router /user/updateUser [post]
 func UpdateUser(c *gin.Context) {
-	user := &models.UserBasic{
-		UserName: c.PostForm("userName"),
-		Name:     c.PostForm("name"),
-		PassWord: c.PostForm("passWord"),
-		Phone:    c.PostForm("phone"),
-		Email:    c.PostForm("email"),
-	}
-
-	_, err := govalidator.ValidateStruct(user)
-	if err != nil {
-		fmt.Println(err)
-		c.JSON(400, gin.H{
-			"message": "修改失败,手机号/邮箱有误",
-		})
-		return
-	}
-
-	createUser := models.UpdateUser(user)
-	if createUser.Error != nil {
-		c.JSON(200, gin.H{
-			"message": "修改失败",
-		})
-		return
-	}
-	c.JSON(200, gin.H{
-		"message": "修改成功",
-	})
+	resp, code, err := user.UpdateUser(c)
+	RenderJson(c, resp, code, err)
 }
